--- a/gestionannonce/app/src/main/res/layout/login_activity.xml
+++ b/gestionannonce/app/src/main/res/layout/login_activity.xml
@@ -42,5 +42,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="181dp"
-        tools:layout_editor_absoluteY="418dp" />
+        tools:layout_editor_absoluteY="418dp"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
