--- a/gestionannonce/app/src/main/res/layout/main_activity.xml
+++ b/gestionannonce/app/src/main/res/layout/main_activity.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,38 +8,46 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:layout_width="170dp"
-        android:layout_height="166dp"
+        android:layout_width="119dp"
+        android:layout_height="134dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="216dp"
+        android:layout_marginEnd="121dp"
         android:src="@drawable/user_icon"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="216dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/buttonGuest"
-        android:backgroundTint="#8ecae6"
         android:layout_width="165dp"
         android:layout_height="270dp"
-        android:textSize="26dp"
         android:layout_marginStart="28dp"
+        android:layout_marginEnd="218dp"
         android:layout_marginBottom="48dp"
+        android:backgroundTint="#8ecae6"
         android:text="Visiteur"
 
+        android:textSize="26dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonSeller"
         android:layout_width="165dp"
         android:layout_height="270dp"
-        android:layout_marginStart="29dp"
+        android:layout_marginStart="210dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="48dp"
-        android:text="Vendeur"
-        android:textSize="26dp"
         android:backgroundTint="#fb8500"
+        android:text="Vendeur"
+
+        android:textSize="26dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
