--- a/gestionannonce/app/src/main/res/layout/edit_activity.xml
+++ b/gestionannonce/app/src/main/res/layout/edit_activity.xml
@@ -1,37 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".EditActivity">
 
-    <!--Edit text to enter Ad name-->
-    <EditText
-        android:id="@+id/idEdtAd_ID"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Entrer l'ID de votre annonce" />
-
-    <!--edit text to enter aD duration-->
-    <EditText
-        android:id="@+id/idEdtAdDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Enter LA description de votre annonce" />
-
-    <!--edit text to display Ad tracks-->
-    <EditText
-        android:id="@+id/idEdtAdphone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Entrere votre numero de telephone" />
-
-    <!--edit text for Ad description-->
     <EditText
         android:id="@+id/idEdtAdemail"
         android:layout_width="match_parent"
@@ -39,13 +14,43 @@
         android:layout_margin="10dp"
         android:hint="Entrer votre email" />
 
-    <!--button for adding new Ad-->
-    <Button
-        android:id="@+id/idBtnAddAd"
+    <EditText
+        android:id="@+id/idEdtAd_ID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:hint="Entrer l'ID de votre annonce" />
+
+    <EditText
+        android:id="@+id/idEdtAdDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:hint="Enter la description de votre annonce" />
+
+    <EditText
+        android:id="@+id/idEdtAdphone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:hint="Entrer votre numero de telephone" />
+
+    <Button
+        android:id="@+id/idBtnAddAd"
+        android:layout_width="393dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:text="Ajouter l'Annonce"
+        app:cornerRadius="20dp"
         android:textAllCaps="false" />
+    <Button
+        android:id="@+id/idBtnListAd"
+        android:layout_width="393dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="Toutes les annonces"
+        app:cornerRadius="20dp"
+        android:textAllCaps="false" />
+
 
 </LinearLayout>
