--- a/gestionannonce/app/src/main/res/layout/main_activity.xml
+++ b/gestionannonce/app/src/main/res/layout/main_activity.xml
@@ -27,6 +27,7 @@
         android:layout_marginEnd="218dp"
         android:layout_marginBottom="48dp"
         android:backgroundTint="#8ecae6"
+        app:cornerRadius="10dp"
         android:text="Visiteur"
 
         android:textSize="26dp"
@@ -43,7 +44,7 @@
         android:layout_marginBottom="48dp"
         android:backgroundTint="#fb8500"
         android:text="Vendeur"
-
+        app:cornerRadius="10dp"
         android:textSize="26dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
