--- a/gestionannonce/app/src/main/res/layout/main_activity.xml
+++ b/gestionannonce/app/src/main/res/layout/main_activity.xml
@@ -11,10 +11,11 @@
         android:layout_width="119dp"
         android:layout_height="134dp"
         android:layout_marginStart="120dp"
-        android:layout_marginTop="216dp"
+        android:layout_marginTop="188dp"
         android:layout_marginEnd="121dp"
         android:src="@drawable/user_icon"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
@@ -56,7 +57,7 @@
         android:layout_width="221dp"
         android:layout_height="70dp"
         android:layout_marginStart="132dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="132dp"
         android:text="Vous êtes"
         android:textColor="#023047"
@@ -65,4 +66,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nico and Sekou"
+        android:textSize="8sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.991" />
 </androidx.constraintlayout.widget.ConstraintLayout>
