--- a/gestionannonce/app/src/main/res/layout/view_ad.xml
+++ b/gestionannonce/app/src/main/res/layout/view_ad.xml
@@ -6,15 +6,38 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/buttonView"
+        android:id="@+id/buttonViewAd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#8ecae6"
         android:text="Consulter les annonces"
+        android:textAlignment="center"
+        app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.46"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.879" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="268dp"
+        android:layout_height="54dp"
+        android:hint="Entrer l'Id de lannonce"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/buttonViewAd"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="68dp"
+        android:layout_height="55dp"
+        android:src="@drawable/user_icon"
+        app:layout_constraintBottom_toTopOf="@+id/editText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
