--- a/gestionannonce/app/src/main/res/layout/login_activity.xml
+++ b/gestionannonce/app/src/main/res/layout/login_activity.xml
@@ -26,7 +26,7 @@
         android:layout_marginEnd="101dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="Enter password"
+        android:hint="Enter password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
